--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /*Load google font*/
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+@import url('https://fonts.cdnfonts.com/css/sono');
 
 
 /* Reset Styles */
@@ -76,9 +77,25 @@ div , footer {
 
 /* Reset ends */
 
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+}
+
+@keyframes cursor-blink {
+	0% {
+	  opacity: 0;
+	}
+  }
+
 
 body{
 	background: #0a192f;
+	animation: fadeInAnimation ease 3s;
 }
 
 
@@ -99,6 +116,7 @@ h1.name {
 	font-weight: 300;
 	display: inline-block;
 	color: white;
+	margin-right: 3%;
 }
 
 .job-title {
@@ -107,26 +125,51 @@ h1.name {
 	color: #4A90E2;
 	font-weight: 600;
 	margin-top: 15px;
-	margin-left: 20px;
 	border-radius: 5px;
 	display: inline-block;
-	padding: 15px 25px;
+	padding: 0.8em 1.5em;
+	font-family: 'Sono', sans-serif;
+}
+
+.job-title::after{
+	font-family: 'Sono', sans-serif;
+	content: "";
+	width: 5px;
+	height: 25px;
+	background: #4A90E2;
+	display: inline-block;
+	animation: cursor-blink 1.5s steps(2) infinite;
 }
 
 .email {
 	display: block;
 	font-size: 24px;
+	font-family: 'Sono', sans-serif;
 	font-weight: 300;
 	margin-top: 10px;
 	color: #64ffda;
 }
 
 .resume {
-	font-size: 44px;
+	font-size: 40px;
 	font-weight: 500;
 	margin-top: 60px;
 	line-height: 55px;
 	color: #8892b0;
+}
+
+.resume2{
+	font-size: 20px;
+	font-weight: 500;
+	margin-top: 1em;
+	line-height: 25px;
+	color: #8892b0;
+}
+
+.numbered{
+	color: #8892b0;
+	font-family: 'Sono', sans-serif;
+	font-size: 0.6em;
 }
 
 /* Resume End */
@@ -136,14 +179,30 @@ h1.name {
 .sections {
 	vertical-align: top;
 	display: inline-block;
-	width: 49.7%;
+	width: 60%;
 	height: 50px;
 }
 
 .section-title {
-	font-size: 20px;
+	color: #64ffda;
+	font-size: 2em;
 	font-weight: 600;
 	margin-bottom: 15px;
+	font-family: 'Sono', sans-serif;
+}
+
+.section-title::after{
+	font-family: 'Sono', sans-serif;
+	content: "";
+	width: 5px;
+	height: 25px;
+	background: #64ffda;
+	display: inline-block;
+	animation: cursor-blink 1.5s steps(2) infinite;
+}
+
+.description_languages{
+	color: white;
 }
 
 .list-card {
@@ -190,7 +249,7 @@ h1.name {
 }
 
 .card {
-	width: 47.9%;
+	width: 48.9%;
 	height: 200px;
 	background-color: #EEF0F7;
 	display: inline-block;
@@ -198,7 +257,12 @@ h1.name {
 	vertical-align: top;
 	border-radius: 10px;
 	text-align: center;
-	padding-top: 50px
+	padding-top: 50px;
+	opacity: 0.8;
+}
+
+.website-image{
+	max-width: 80%;
 }
 
 .card-active , .card:hover{
@@ -206,13 +270,15 @@ h1.name {
 	transition: 0.5s;
 	background-color: #fff;
 	box-shadow: 0px 5px 50px -8px #ddd;
-	cursor: pointer;
+	opacity: 1.0;
 }
 
 
 .skill-level {
 	display: inline-block;
-	max-width: 160px;
+	max-width: 39%;
+	margin-bottom: 10%;
+	float: left;
 }
 
 .skill-level span {
@@ -236,7 +302,6 @@ h1.name {
 	display: inline-block;
 	max-width: 300px;
 	text-align: left;
-	margin-top: 15px;
 	margin-left: 15px;
 }
 
@@ -263,7 +328,7 @@ h1.name {
 ol {
 	position: relative;
 	display: block;
-	margin: 100px 0;
+	margin: 50px 0;
 	height: 2px;
 	background: #EEF0F7;
 
@@ -298,13 +363,14 @@ li {
 	width: 25%;
   	height: 50px;
 }
+
 li .line {
   position: absolute;
-  top: -47px;
+  top: -2.1em;
   left: 1%;
-  font-size: 20px;
+  font-size: 1.8em;
   font-weight: 600;
-  color: #04143A;
+  color: #64ffda;
 }
 li .point {
 	content: "";
@@ -331,6 +397,12 @@ li .description {
   line-height: 25px;
   color: #5B6A9A;
 }
+
+li .description:hover{
+	text-shadow: 0 0 1em #FEFEFE;
+	cursor: default;
+}
+
 .description::before {
   content: '';
   width: 0; 
