Added Contact Section; Added Navbar; Added Resume;

--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,87 @@
 
 
 /* Reset Styles */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -26,36 +94,58 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
-a{
+
+html{
+	scroll-behavior: smooth;
+}
+
+a {
 	text-decoration: none;
 	text-transform: none;
-	color: #4A90E2;
+	color: #8892b0;
 }
 
 body {
 	line-height: 1;
-	font-family: lato, ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
-	text-rendering : optimizeLegibility;
-	-webkit-font-smoothing : antialiased;
+	font-family: lato, ubuntu, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
 	font-size: 19px;
 	background-color: #FEFEFE;
 	color: #04143A;
 }
-ol, ul {
+
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -71,35 +161,61 @@ strong {
 	font-weight: 600;
 }
 
-div , footer {
+div,
+footer {
 	box-sizing: border-box;
 }
 
 /* Reset ends */
 
 @keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-     }
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
 
 @keyframes cursor-blink {
 	0% {
-	  opacity: 0;
+		opacity: 0;
 	}
-  }
+}
 
 
-body{
+
+body {
 	background: #0a192f;
 	animation: fadeInAnimation ease 3s;
 }
 
+a:link    { text-decoration: none; }
 
 /* Resume Start */
+
+.container1{
+	max-width: 90%;
+	padding: 1em;
+	
+}
+
+.nav{
+	color: #8892b0;
+	display: inline-block;    
+	font-family: 'Sono', sans-serif;
+	font-size: 20px;
+	float: right;
+	margin-right: 1em;
+}
+
+.numbered_nav{
+	color: #64ffda;
+	font-family: 'Sono', sans-serif;
+	font-size: 0.8em;
+}
+
 .container {
 	max-width: 1100px;
 	height: auto;
@@ -107,7 +223,7 @@ body{
 }
 
 .hero {
-	margin: 50px auto; 
+	margin: 50px auto;
 	position: relative;
 }
 
@@ -131,7 +247,7 @@ h1.name {
 	font-family: 'Sono', sans-serif;
 }
 
-.job-title::after{
+.job-title::after {
 	font-family: 'Sono', sans-serif;
 	content: "";
 	width: 5px;
@@ -158,7 +274,7 @@ h1.name {
 	color: #8892b0;
 }
 
-.resume2{
+.resume2 {
 	font-size: 20px;
 	font-weight: 500;
 	margin-top: 1em;
@@ -166,7 +282,7 @@ h1.name {
 	color: #8892b0;
 }
 
-.numbered{
+.numbered {
 	color: #8892b0;
 	font-family: 'Sono', sans-serif;
 	font-size: 0.6em;
@@ -191,7 +307,7 @@ h1.name {
 	font-family: 'Sono', sans-serif;
 }
 
-.section-title::after{
+.section-title::after {
 	font-family: 'Sono', sans-serif;
 	content: "";
 	width: 5px;
@@ -201,7 +317,7 @@ h1.name {
 	animation: cursor-blink 1.5s steps(2) infinite;
 }
 
-.description_languages{
+.description_languages {
 	color: white;
 }
 
@@ -209,7 +325,8 @@ h1.name {
 	margin: 30px 0;
 }
 
-.list-card .exp , .list-card div{
+.list-card .exp,
+.list-card div {
 	display: inline-block;
 	vertical-align: top;
 }
@@ -261,11 +378,12 @@ h1.name {
 	opacity: 0.8;
 }
 
-.website-image{
+.website-image {
 	max-width: 80%;
 }
 
-.card-active , .card:hover{
+.card-active,
+.card:hover {
 	transform: scale(1.02);
 	transition: 0.5s;
 	background-color: #fff;
@@ -312,7 +430,7 @@ h1.name {
 	margin-bottom: 5px;
 }
 
-.skill-meta span{
+.skill-meta span {
 	color: #81899C;
 	line-height: 20px;
 	font-size: 16px;
@@ -333,6 +451,7 @@ ol {
 	background: #EEF0F7;
 
 }
+
 ol::before,
 ol::after {
 	content: "";
@@ -341,18 +460,20 @@ ol::after {
 	display: block;
 	width: 0;
 	height: 0;
-  	border-radius: 10px;
+	border-radius: 10px;
 	border: 0px solid #31708F;
 }
+
 ol::before {
 	left: -5px;
 }
+
 ol::after {
 	right: -10px;
 	border: 0px solid transparent;
 	border-right: 0;
 	border-left: 20px solid #31708F;
-  	border-radius: 3px;
+	border-radius: 3px;
 }
 
 /* ---- Timeline elements ---- */
@@ -361,17 +482,18 @@ li {
 	display: inline-block;
 	float: left;
 	width: 25%;
-  	height: 50px;
+	height: 50px;
 }
 
 li .line {
-  position: absolute;
-  top: -2.1em;
-  left: 1%;
-  font-size: 1.8em;
-  font-weight: 600;
-  color: #64ffda;
+	position: absolute;
+	top: -2.1em;
+	left: 1%;
+	font-size: 1.8em;
+	font-weight: 600;
+	color: #64ffda;
 }
+
 li .point {
 	content: "";
 	top: -7px;
@@ -382,41 +504,42 @@ li .point {
 	border: 4px solid #fff;
 	border-radius: 10px;
 	background: #4A90E2;
-  position: absolute;
-}
-li .description {
-  display: none;
-  padding: 10px 0;
-  margin-top: 20px;
-  position: relative;
-  font-weight: normal;
-  z-index: 1;
-  max-width: 95%;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 25px;
-  color: #5B6A9A;
+	position: absolute;
 }
 
-li .description:hover{
+li .description {
+	display: none;
+	padding: 10px 0;
+	margin-top: 20px;
+	position: relative;
+	font-weight: normal;
+	z-index: 1;
+	max-width: 95%;
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 25px;
+	color: #5B6A9A;
+}
+
+li .description:hover {
 	text-shadow: 0 0 1em #FEFEFE;
 	cursor: default;
 }
 
 .description::before {
-  content: '';
-  width: 0; 
-  height: 0; 
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid #f4f4f4;
-  position: absolute;
-  top: -5px;
-  left: 43%;
+	content: '';
+	width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 5px solid #f4f4f4;
+	position: absolute;
+	top: -5px;
+	left: 43%;
 }
 
 
-.timeline .date{
+.timeline .date {
 	font-size: 14px;
 	color: #81899C;
 	font-weight: 300;
@@ -424,10 +547,15 @@ li .description:hover{
 
 /* ---- Hover effects ---- */
 li:hover {
-  color: #48A4D2;
+	color: #48A4D2;
 }
+
 li .description {
-  display: block;
+	display: block;
+}
+
+.mt-10 {
+	margin-top: 10%;
 }
 
 /*timeline ends*/
@@ -436,21 +564,23 @@ li .description {
 
 /* Media queries*/
 
-@media(max-width: 1024px){
+@media(max-width: 1024px) {
 	.container {
 		padding: 15px;
 		margin: 0px auto;
 	}
+
 	.cards {
 		margin-top: 250px;
 	}
 }
 
-@media(max-width: 768px){
+@media(max-width: 768px) {
 	.container {
 		padding: 15px;
 		margin: 0px auto;
 	}
+
 	.cards {
 		margin-top: 320px;
 	}
@@ -459,22 +589,25 @@ li .description {
 		padding: 15px;
 		text-align: left;
 	}
+
 	.card h2 {
 		font-size: 70px;
 	}
-		.card , .sections {
+
+	.card,
+	.sections {
 		width: 100%;
 		height: auto;
 		margin: 10px 0;
 		float: left;
 	}
 
-	.timeline{
+	.timeline {
 		border: none;
-		background-color: rgba(0,0,0,0);
+		background-color: rgba(0, 0, 0, 0);
 	}
 
-	.timeline li{
+	.timeline li {
 		margin-top: 70px;
 		height: 150px;
 	}
@@ -486,16 +619,17 @@ li .description {
 		font-size: 40px;
 	}
 
-	.card , .sections {
+	.card,
+	.sections {
 		width: 100%;
 		height: auto;
 		margin: 10px 0;
 		float: left;
 	}
 
-	.timeline{
+	.timeline {
 		display: none;
-		}
+	}
 
 	.job-title {
 		font-size: 15px;
@@ -509,14 +643,16 @@ li .description {
 		font-size: 20px;
 		line-height: 28px;
 	}
+
 	.container {
 		margin: 0px;
 		padding: 0 15px;
 	}
+
 	footer {
 		margin-top: 2050px;
 	}
-	}
+}
 
 
 /* End of all :P*/
