--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ section {
 	display: block;
 }
 
-html{
+html {
 	scroll-behavior: smooth;
 }
 
@@ -189,36 +189,41 @@ footer {
 body {
 	background: #0a192f;
 	animation: fadeInAnimation ease 3s;
-	background-image: linear-gradient(#0a192f, #193c70);
+	background-image: linear-gradient(#0a192f, #163d76);
 }
 
-a:link    { text-decoration: none; }
-
-
+a:link {
+	text-decoration: none;
+}
 
 /* Resume Start */
 
-.container-mobile{
+.profile-picture {
+	max-width: 25%;
+	border-radius: 10%;
+}
+
+.container-mobile {
 	visibility: hidden;
 	display: none;
 }
 
-.container1{
+.container1 {
 	max-width: 90%;
 	padding: 1em;
-	
+
 }
 
-.nav{
+.nav {
 	color: #8892b0;
-	display: inline-block;    
+	display: inline-block;
 	font-family: 'Sono', sans-serif;
 	font-size: 20px;
 	float: right;
 	margin-right: 1em;
 }
 
-.numbered_nav{
+.numbered_nav {
 	color: #64ffda;
 	font-family: 'Sono', sans-serif;
 	font-size: 0.8em;
@@ -296,10 +301,17 @@ h1.name {
 	font-size: 0.6em;
 }
 
+#about-me {
+	border-radius: 25px;
+	border: 2px solid #64ffda;
+	padding: 0 30px 0;
+}
+
 /* Resume End */
 
 
 /* Skills & Interests Start */
+
 .sections {
 	vertical-align: top;
 	display: inline-block;
@@ -444,18 +456,19 @@ h1.name {
 	font-size: 16px;
 }
 
+
 /* Achievements ends */
 
 
 
 /* Timeline styles*/
 
-.description-mobile{
+.description-mobile {
 	font-size: 20px;
-    font-weight: 500;
-    margin-top: 1em;
-    line-height: 25px;
-    color: #8892b0;
+	font-weight: 500;
+	margin-top: 1em;
+	line-height: 25px;
+	color: #8892b0;
 }
 
 ol {
@@ -492,7 +505,7 @@ ol::after {
 }
 
 /* ---- Timeline elements ---- */
-.mobile-font{
+.mobile-font {
 	font-family: 'Sono', sans-serif;
 	color: #64ffda;
 }
@@ -580,12 +593,21 @@ li .description {
 
 /*timeline ends*/
 
+/* footer */
+.icon-color{
+	color: #64ffda;
+}
 
+.mr-2{
+	margin-right: 2%;
+}
 
 /* Media queries*/
 
-@media (max-width: 1072px){
-	.card, .sections {
+@media (max-width: 1072px) {
+
+	.card,
+	.sections {
 		width: 100%;
 		height: auto;
 		margin: 10px 0;
@@ -599,7 +621,7 @@ li .description {
 		margin: 0px auto;
 	}
 
-	.container-contact{
+	.container-contact {
 		margin-top: 10%;
 	}
 
@@ -614,7 +636,7 @@ li .description {
 		margin: 0px auto;
 	}
 
-	.container-mobile{
+	.container-mobile {
 		display: block !important;
 		visibility: visible;
 		padding: 15px;
@@ -622,7 +644,7 @@ li .description {
 	}
 
 	.div-no-mobile {
-		display:none
+		display: none
 	}
 
 	.container-contact {
@@ -667,7 +689,7 @@ li .description {
 		font-size: 40px;
 	}
 
-	.skill-level{
+	.skill-level {
 		margin-left: 33%;
 	}
 
@@ -706,7 +728,7 @@ li .description {
 		margin-top: 2050px;
 	}
 
-	.container-mobile{
+	.container-mobile {
 		display: block !important;
 		visibility: visible;
 		padding: 15px;
