--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.cdnfonts.com/css/sono');
 
 
+
+
 /* Reset Styles */
 html,
 body,
@@ -185,11 +187,14 @@ footer {
 }
 
 
-
 body {
 	background: #0a192f;
 	animation: fadeInAnimation ease 3s;
 	background-image: linear-gradient(#0a192f, #163d76);
+	border-width: 5px;
+	border-style: solid;
+	border-image: linear-gradient(#64ffda, #4dc1a5) 1;
+	border-radius: 1px;
 }
 
 a:link {
@@ -197,6 +202,8 @@ a:link {
 }
 
 /* Resume Start */
+
+
 
 .profile-picture {
 	max-width: 25%;
