--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ body {
 	background-image: linear-gradient(#0a192f, #163d76);
 	border-width: 5px;
 	border-style: solid;
-	border-image: linear-gradient(#64ffda, #4dc1a5) 1;
+	border-image: linear-gradient(#64ffda, #64ffda) 1;
 	border-radius: 1px;
 }
 
@@ -203,7 +203,26 @@ a:link {
 
 /* Resume Start */
 
+.gif{
+    position: absolute;
+    margin-left: 61.45%;
+	height: 245px;
+}
 
+.progress-container {
+    width: 99.45%;
+    height: 5px;
+    background: #ccc;
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+}
+  
+.progress-bar {
+    height: 5px;
+    background: #64ffda;
+    width: 0%;
+}
 
 .profile-picture {
 	max-width: 25%;
@@ -666,6 +685,11 @@ li .description {
 }
 
 @media(max-width: 768px) {
+
+	.gif{
+		visibility: hidden;
+	}
+	
 	.container {
 		padding: 15px;
 		margin: 0px auto;
@@ -720,6 +744,11 @@ li .description {
 
 
 @media(max-width: 425px) {
+
+	.gif{
+		visibility: hidden;
+	}
+
 	h1.name {
 		font-size: 40px;
 	}
