--- a/styles.css
+++ b/styles.css
@@ -314,7 +314,7 @@ h1.name {
   font-weight: 500;
   margin-top: 1em;
   line-height: 25px;
-  color: #8892b0;
+  color: #ffffff;
 }
 
 .numbered {
@@ -359,7 +359,7 @@ h1.name {
 }
 
 .description_languages {
-  color: white;
+  color: #ffffff;
 }
 
 .list-card {
